--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_PROFILE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.CAMERA"/>
@@ -37,6 +39,11 @@
         <activity android:name=".SplashActivity">
         </activity>
         <activity android:name=".RegisterActivity">
+        </activity>
+        <activity
+            android:name=".SeeMore"
+            android:label="@string/title_activity_see_more"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
