--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,18 +26,15 @@
             android:name=".LoginActivity"
             android:noHistory="true"
             android:label="@string/app_name">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN"/>-->
-                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
-            <!--</intent-filter>-->
         </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".SplashActivity">
-            android:theme="@android:style/Theme.NoDisplay"
+        <!--android:theme="@android:style/Theme.NoDisplay"-->
+        <activity android:name=".SplashActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:noHistory="true"
             android:label="@string/app_name">
             <intent-filter>
