Kudan AR jar & AR Camera Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,18 @@
         <activity android:name="com.tattood.tattood.TattooEditActivity">
         </activity>
         <activity android:name=".ExtractImage"></activity>
+
+        <activity
+            android:name=".ARCameraViewActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 </manifest>
