--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,9 +78,9 @@
         <activity android:name=".ExtractImage"></activity>
 
         <activity
-            android:name=".ARCameraViewActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:name="com.tattood.tattood.wikitude.recognition.InstantTrackingActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize" />
+
     </application>
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -89,5 +89,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+
 
 </manifest>
