--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
+        <provider android:name=".MySuggestionProvider"
+                  android:authorities="com.example.MySuggestionProvider" />
         <activity
             android:name="com.tattood.tattood.LoginActivity"
             android:label="@string/app_name">
