--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+//    compile 'com.github.yalantis:ucrop:2.2.1'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.4.+'
     compile 'com.github.Cutta:TagView:1.3'
     compile 'com.facebook.fresco:fresco:1.3.0'
     compile 'com.github.jd-alexander:LikeButton:0.2.0'
