--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,13 @@
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="true" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
+        android:required="true"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
 
     <application
         android:allowBackup="true"
@@ -27,71 +26,83 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
-        <provider android:name=".MySuggestionProvider"
-                  android:authorities="com.example.MySuggestionProvider" />
+        <provider
+            android:name=".MySuggestionProvider"
+            android:authorities="com.example.MySuggestionProvider"/>
+
         <activity
-            android:name="com.tattood.tattood.LoginActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name">
         </activity>
         <activity
-            android:name="com.tattood.tattood.DiscoveryActivity"
+            android:name=".DiscoveryActivity"
             android:label="@string/title_discovery">
-            <meta-data android:name="android.app.default_searchable"
-                       android:value=".SearchActivity" />
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".SearchActivity"/>
         </activity>
         <activity
-            android:name="com.tattood.tattood.ProfileActivity"
+            android:name=".ProfileActivity"
             android:label="@string/title_profile">
         </activity>
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+                  android:theme="@style/Base.Theme.AppCompat"/> <!-- optional (needed if default theme has no action bar) -->
         <activity
-            android:name="com.tattood.tattood.SplashActivity"
+            android:name=".SplashActivity"
+            android:label="@string/app_name"
             android:noHistory="true"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:label="@string/app_name">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-            android:name="com.tattood.tattood.RegisterActivity"
+            android:name=".RegisterActivity"
             android:label="@string/title_register">
         </activity>
         <activity
-            android:name="com.tattood.tattood.SeeMore"
+            android:name=".SeeMore"
             android:label="@string/title_activity_see_more">
         </activity>
         <activity
-            android:name="com.tattood.tattood.TattooActivity"
+            android:name=".TattooActivity"
             android:label="@string/title_activity_tattoo">
         </activity>
         <activity
-            android:name="com.tattood.tattood.UserActivity"
+            android:name=".UserActivity"
             android:label="@string/title_activity_user">
         </activity>
-        <activity
-            android:name="com.tattood.tattood.CameraActivity">
+        <activity android:name=".CameraActivity">
         </activity>
         <activity
-            android:name="com.tattood.tattood.UploadActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:label="@string/title_activity_upload">
+            android:name=".UploadActivity"
+            android:label="@string/title_activity_upload"
+            android:windowSoftInputMode="adjustPan">
         </activity>
         <activity
-            android:name="com.tattood.tattood.SearchActivity"
+            android:name=".SearchActivity"
             android:label="@string/title_activity_search">
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
+                <action android:name="android.intent.action.SEARCH"/>
             </intent-filter>
-            <meta-data android:name="android.app.searchable"
-                       android:resource="@xml/searchable" />
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
         </activity>
         <activity
-            android:name="com.tattood.tattood.TattooEditActivity"
+            android:name=".TattooEditActivity"
             android:label="@string/title_edit">
         </activity>
+        <activity android:name=".ExtractImage">
+        </activity>
         <activity
-            android:name=".ExtractImage">
+            android:name=".CropActivity"
+            android:label="@string/title_activity_crop"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
+
 </manifest>
