--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url "https://jitpack.io" }
+        maven {
+            url "https://jitpack.io"
+            url  "https://dl.bintray.com/karlgao0811/MaterialRoundButton"
+        }
     }
 }
 
