--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,8 @@ dependencies {
     })
 
 //    compile 'com.github.yalantis:ucrop:2.2.1'
-    compile 'com.theartofdev.edmodo:android-image-cropper:2.4.+'
+    compile 'com.karlgao.materialroundbutton:materialroundbutton:1.0.0'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.4.2'
     compile 'com.github.Cutta:TagView:1.3'
     compile 'com.facebook.fresco:fresco:1.3.0'
     compile 'com.github.jd-alexander:LikeButton:0.2.0'
