--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     })
 
 //    compile 'com.github.yalantis:ucrop:2.2.1'
+    compile 'cn.hugeterry.coordinatortablayout:coordinatortablayout:1.0.6'
     compile 'com.karlgao.materialroundbutton:materialroundbutton:1.0.0'
     compile 'com.theartofdev.edmodo:android-image-cropper:2.4.2'
     compile 'com.github.Cutta:TagView:1.3'
