--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,8 +45,9 @@
             android:name=".ProfileActivity"
             android:label="@string/title_profile">
         </activity>
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-                  android:theme="@style/Base.Theme.AppCompat"/> <!-- optional (needed if default theme has no action bar) -->
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/> <!-- optional (needed if default theme has no action bar) -->
         <activity
             android:name=".SplashActivity"
             android:label="@string/app_name"
@@ -95,6 +96,8 @@
         <activity
             android:name=".TattooEditActivity"
             android:label="@string/title_edit">
+        </activity>
+        <activity android:name=".ProfileActivity2">
         </activity>
     </application>
 
