Make ProfileActivity2 the primary layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,10 +42,6 @@
                 android:value=".SearchActivity"/>
         </activity>
         <activity
-            android:name=".ProfileActivity"
-            android:label="@string/title_profile">
-        </activity>
-        <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat"/> <!-- optional (needed if default theme has no action bar) -->
         <activity
@@ -97,7 +93,7 @@
             android:name=".TattooEditActivity"
             android:label="@string/title_edit">
         </activity>
-        <activity android:name=".ProfileActivity2">
+        <activity android:name=".ProfileActivity">
         </activity>
     </application>
 
