--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    provided fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     compile 'com.karlgao.materialroundbutton:materialroundbutton:1.0.0'
     compile 'com.theartofdev.edmodo:android-image-cropper:2.4.2'
     compile 'com.github.Cutta:TagView:1.3'
@@ -43,5 +42,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:10.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    compile project(path: ':Bitirme')
 }
 apply plugin: 'com.google.gms.google-services'
+
