--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,6 +95,8 @@
         </activity>
         <activity android:name=".ProfileActivity">
         </activity>
+        <activity android:name="com.tattood.unity.UnityPlayerActivity">
+        </activity>
     </application>
 
 </manifest>
