--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="true"/>
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
     <uses-feature android:name="android.hardware.camera.autofocus"/>
 
     <application
@@ -70,8 +68,6 @@
         <activity
             android:name=".UserActivity"
             android:label="@string/title_activity_user">
-        </activity>
-        <activity android:name=".CameraActivity">
         </activity>
         <activity
             android:name=".UploadActivity"
