--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_PROFILE"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -91,7 +90,7 @@
         </activity>
         <activity android:name="com.tattood.app.ProfileActivity">
         </activity>
-        <activity android:name="com.tattood.unity.UnityPlayerActivity">
+        <activity android:name="com.tattood.tattood.UnityPlayerActivity">
         </activity>
     </application>
 
