--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "com.tattood.app"
-        minSdkVersion 19
+        minSdkVersion 18
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -17,6 +17,15 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro',
                     'proguard-fresco.pro'
+        }
+    }
+}
+
+allprojects {
+    repositories {
+        flatDir {
+            dirs 'libs'
+            dirs project(':Bitirme').file('libs')
         }
     }
 }
@@ -43,6 +52,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile project(path: ':Bitirme')
+    compile project(':wikitude-unity-bridge')
 }
 apply plugin: 'com.google.gms.google-services'
 
