--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
         maven { url  "https://dl.bintray.com/karlgao0811/MaterialRoundButton" }
         flatDir {
             dirs 'libs'
+            dirs project(':Bitirme').file('libs')
         }
     }
 }
