--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          package="com.tattood.app">
+          package="com.tattood.tattood">
 
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -25,15 +25,15 @@
         android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
         <provider
-            android:name="com.tattood.app.MySuggestionProvider"
-            android:authorities="com.tattood.app.MySuggestionProvider"/>
+            android:name="com.tattood.tattood.MySuggestionProvider"
+            android:authorities="com.tattood.tattood.MySuggestionProvider"/>
 
         <activity
-            android:name="com.tattood.app.LoginActivity"
+            android:name="com.tattood.tattood.LoginActivity"
             android:label="@string/app_name">
         </activity>
         <activity
-            android:name="com.tattood.app.DiscoveryActivity"
+            android:name="com.tattood.tattood.DiscoveryActivity"
             android:label="@string/title_discovery">
             <meta-data
                 android:name="android.app.default_searchable"
@@ -43,7 +43,7 @@
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat"/> <!-- optional (needed if default theme has no action bar) -->
         <activity
-            android:name="com.tattood.app.SplashActivity"
+            android:name="com.tattood.tattood.SplashActivity"
             android:label="@string/app_name"
             android:noHistory="true"
             android:theme="@style/AppTheme.NoActionBar">
@@ -54,28 +54,28 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.tattood.app.RegisterActivity"
+            android:name="com.tattood.tattood.RegisterActivity"
             android:label="@string/title_register">
         </activity>
         <activity
-            android:name="com.tattood.app.SeeMore"
+            android:name="com.tattood.tattood.SeeMore"
             android:label="@string/title_activity_see_more">
         </activity>
         <activity
-            android:name="com.tattood.app.TattooActivity"
+            android:name="com.tattood.tattood.TattooActivity"
             android:label="@string/title_activity_tattoo">
         </activity>
         <activity
-            android:name="com.tattood.app.UserActivity"
+            android:name="com.tattood.tattood.UserActivity"
             android:label="@string/title_activity_user">
         </activity>
         <activity
-            android:name="com.tattood.app.UploadActivity"
+            android:name="com.tattood.tattood.UploadActivity"
             android:label="@string/title_activity_upload"
             android:windowSoftInputMode="adjustPan">
         </activity>
         <activity
-            android:name="com.tattood.app.SearchActivity"
+            android:name="com.tattood.tattood.SearchActivity"
             android:label="@string/title_activity_search">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH"/>
@@ -86,10 +86,10 @@
                 android:resource="@xml/searchable"/>
         </activity>
         <activity
-            android:name="com.tattood.app.TattooEditActivity"
+            android:name="com.tattood.tattood.TattooEditActivity"
             android:label="@string/title_edit">
         </activity>
-        <activity android:name="com.tattood.app.ProfileActivity">
+        <activity android:name="com.tattood.tattood.ProfileActivity">
         </activity>
         <activity android:name="com.wikitude.unity.WikitudeActivity">
         </activity>
