--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "com.tattood.tattood"
-        minSdkVersion 18
+        minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -51,6 +51,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile project(':Bitirme')
+    compile 'com.shaishavgandhi:login-buttons:0.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
 
