Fixed tattoo like bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:name=".BaseApp"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
+        android:largeHeap="true"
         tools:ignore="GoogleAppIndexingWarning">
         <provider
             android:name="com.tattood.tattood.MySuggestionProvider"
