Unity is now functional

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,6 +93,8 @@
         </activity>
         <activity android:name="com.wikitude.unity.WikitudeActivity">
         </activity>
+        <activity android:name="com.tattood.unity.UnityPlayerActivity">
+        </activity>
     </application>
 
 </manifest>
