--- a/Bitirme/src/main/AndroidManifest.xml
+++ b/Bitirme/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
       <!--</intent-filter>-->
     <!--</activity>-->
   <!--</application>-->
+  <uses-feature android:name="android.hardware.vulkan" android:required="false" />
   <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
   <uses-feature android:name="android.hardware.camera.front" android:required="false" />
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="18" />
